Refactor PetGenome and EtpetsMainView to use Math.clamp for value clamping